# src/main/java/br/com/hahn/auth/application/controller/AuthController.java
@@ -1,42 +1,29 @@
 package br.com.hahn.auth.application.controller;
 
-import br.com.hahn.auth.application.dto.request.*;
-import br.com.hahn.auth.application.dto.response.LoginResponseDTO;
+import br.com.hahn.auth.TokenApi;
 import br.com.hahn.auth.application.service.AuthService;
-import lombok.AllArgsConstructor;
+import br.com.hahn.auth.domain.model.LoginResponse;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.time.Instant;
+
 @RestController
-@RequestMapping("/auth")
+@RequestMapping("/token")
 @Slf4j
-@AllArgsConstructor
-public class AuthController {
+@RequiredArgsConstructor
+public class AuthController extends AbstractController implements TokenApi {
 
     private final AuthService authService;
 
-    // TOKEN CONTROLLER
-    @PostMapping("/refresh")
-    public ResponseEntity<LoginResponseDTO> refreshToken(@RequestHeader("Authorization") String authorizationHeader) {
-        log.info("AuthController: Refresh Token Request");
-        String token = authorizationHeader.replace("Bearer ", "");
-        LoginResponseDTO renewedToken = authService.refreshAccessToken(token);
-        return ResponseEntity.status(HttpStatus.OK).body(renewedToken);
+    @Override
+    public ResponseEntity<LoginResponse> postRefreshToken() {
+        log.info("AuthController: Starting refresh token process at: {}", Instant.now());
+        var response = authService.generateNewTokenForUser(extractJwtFromContext());
+        return ResponseEntity.status(HttpStatus.CREATED).body(response);
+
     }
-
-
-
-
-    // TODO - APAGAR
-    @PostMapping("/reset-password")
-    public ResponseEntity<String> resetePassword(@RequestBody PasswordOperationRequestDTO passwordOperationRequestDTO){
-        log.info("AuthController: Resete password Request");
-        String response = authService.resetPassword(passwordOperationRequestDTO);
-        return ResponseEntity.status(HttpStatus.OK).body(response);
-    }
-
-
-
 }
