# src/main/java/br/com/hahn/auth/application/controller/LoginController.java
@@ -1,7 +1,7 @@
 package br.com.hahn.auth.application.controller;
 
 import br.com.hahn.auth.LoginApi;
-import br.com.hahn.auth.application.service.LoginService;
+import br.com.hahn.auth.application.service.AuthService;
 import br.com.hahn.auth.domain.model.LogOfRequest;
 import br.com.hahn.auth.domain.model.LoginRequest;
 import br.com.hahn.auth.domain.model.LoginResponse;
@@ -9,8 +9,6 @@ import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -22,19 +20,19 @@ import java.time.Instant;
 @AllArgsConstructor
 public class LoginController extends AbstractController implements LoginApi {
 
-    private final LoginService loginService;
+    private final AuthService authService;
 
     @Override
     public ResponseEntity<LoginResponse> postLogin(LoginRequest loginRequest) {
         log.info("LoginController: Starting login for user {}, at {}", loginRequest.getEmail(), Instant.now());
-        var loginResponse = loginService.userLogin(loginRequest);
-        return ResponseEntity.status(HttpStatus.OK).body(loginResponse);
+        var loginResponse = authService.userLogin(loginRequest);
+        return ResponseEntity.status(HttpStatus.CREATED).body(loginResponse);
     }
 
     @Override
     public ResponseEntity<Void> deleteLoggedUser(LogOfRequest logOfRequest) {
         log.info("LoginController: Starting logoff for user with email: {}, at {}", logOfRequest.getEmail(), Instant.now());
-        loginService.logOffUser(extractJwtFromContext());
+        authService.logOffUser(extractJwtFromContext());
         return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
     }
 }
